infra/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    #deployment.kubernetes.io/revision: "2"
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: web-pod
  name: web-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-pod
  template:
    metadata:
      labels:
        app: web-pod
    spec:
      containers:
      - image: registry.access.redhat.com/ubi8/httpd-24:1-215
        imagePullPolicy: IfNotPresent
        name: httpd-24
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /var/www/html
          name: gitops-volume
      volumes:
      - name: gitops-volume
        persistentVolumeClaim:
          claimName: gitops-pvc
