infra/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: 
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: app-pod
  name: app-pod
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: app-pod
