infra/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: 
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: web-pod
  name: web-pod
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web-pod
